--- a/content/blog/another-proud-son-json/index.adoc
+++ b/content/blog/another-proud-son-json/index.adoc
@@ -5,8 +5,8 @@
 :tags: security, information, jwt
 :image: cover.png
 :alt: Text editor with code highlighting
-:description: In this article we introduce JSON Web Token (JWT). JWT is a simple, quick way to send secured, digital signed data from one part to another via URL using a base64 algorithm to encode. This data can be signed using different encryption methods, such as public/private  RSA key, HMAC or SHA256.
-:keywords: JSON, Security, Digital signature, Web token, JWT , Information.
+:description: Here we introduce JSON Web Token, a simple, quick way to send secure, digital signed data from one part to another via URL using a base64 algorithm to encode.
+:keywords: JSON, Security, Digital Signature, Web Token, JWT, Information, Pentesting, Ethical Hacking
 :author: Juan Aguirre
 :writer: juanes
 :name: Juan Esteban Aguirre González
@@ -15,7 +15,7 @@
 :figure-caption: Figure
 :source: https://unsplash.com/photos/OqtafYT5kTw
 
-= Another proud son of JSON
+= Another Proud Son of JSON
 
 Today everything is connected, and thus, everything is communicated.
 Security has become a major issue in the complex world
