--- a/content/blog/fck-strategy/index.adoc
+++ b/content/blog/fck-strategy/index.adoc
@@ -5,8 +5,8 @@
 :tags: business, security, mistake, company
 :image: cover.png
 :alt: Broken blue ceramic plate on Unsplash: https://unsplash.com/photos/Odc4dcsjUBw
-:description: By facing errors, organizations try to deviate public attention; a rational response, perhaps. Companies should pay attention to how to handle mistakes (not only in cybersecurity). Moreover, businesses should think about how to leverage from imperfection. A F*CK statement provides a lesson.
-:keywords: Bussiness, Mistakes, Company, Image, Cibersecurity, Pratfall Effect
+:description: Companies should pay attention to how to handle mistakes and think about how to leverage from imperfection. Here, a F*CK statement provides a lesson.
+:keywords: Bussiness, Mistakes, Company, Image, Cibersecurity, Pratfall Effect, Ethical Hacking, Pentesting
 :author: Julian Arango
 :writer: jarango
 :name: Julian Arango
@@ -14,7 +14,7 @@
 :about2: Data scientist in training.
 :source: https://unsplash.com/photos/Odc4dcsjUBw
 
-= The F*CK strategy
+= The F*CK Strategy
 
 Do you like fried chicken?
 A year ago or so, `KFC` -the chicken fast-food chain-
