--- a/content/blog/git-steroids/index.adoc
+++ b/content/blog/git-steroids/index.adoc
@@ -5,8 +5,8 @@
 :tags: git, software, documentation, standard, engineering, business, linters
 :image: cover.png
 :alt: Computer with do what is great sign.
-:description: Learn why it is important and how to define a Git commit message syntax and use real-time commit message linters to improve your Git history, reduce documentation and set the foundations to implement Data Analytics processes in your Git repositories.
-:keywords: Git, Standardization, Commitlint, Data Analytics, Efective Logging, Documentation
+:description: Learn here, among other things, how to define a Git commit message syntax and use real-time commit message linters to improve your Git history.
+:keywords: Git, Standardization, Commitlint, Data Analytics, Efective Logging, Documentation, Ethical Hacking, Pentesting
 :author: Daniel Salazar
 :writer: dsalazaratfluid
 :name: Daniel Salazar
@@ -14,7 +14,7 @@
 :about2: “An intellectual says a simple thing in a hard way. An artist says a hard thing in a simple way.” Charles Bukowski
 :source: https://unsplash.com/photos/5Xwaj9gaR0g
 
-= Git on steroids
+= Git on Steroids
 
 There is a universal law
 that anyone in the tech world should know:
