--- a/README.adoc
+++ b/README.adoc
@@ -8,6 +8,4 @@
 
 == How to start
 
-1. Install Nix by running `curl https://nixos.org/nix/install | sh`
-
-2. Run build.sh from root folder
+1. Run `./build.sh` from root folder
