feat(doc): #2994.211 add refs to some rules
- Added ASVS references to R337 and R075
- Added CWE reference to R075


Former-commit-id: 82cc0ca177204e84913ebcb3215c0301d0098ee3

--- a/content/pages/rules/source/337/index.adoc
+++ b/content/pages/rules/source/337/index.adoc
@@ -36,7 +36,7 @@ The software checks the state of a resource before using that resource,
 but the resource's state can change between the check and the use in a way that
 invalidates the results of the check.
 This can cause the software to perform invalid actions when the resource is in
-an unexpected state. 
+an unexpected state.
 
 . [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.11 Business Logic Architectural Requirements.(1.11.2)]
@@ -49,3 +49,8 @@ V1.11 Business Logic Architectural Requirements.(1.11.3)]
 Verify that all high-value business logic flows,
 including authentication, session management and access control,
 are thread safe and resistant to time-of-check and time-of-use race conditions.
+
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V1.11 Business Logic Architectural Requirements.(1.11.6)]
+Verify the application does not suffer from "time of check to time of use"
+(*TOCTOU*) issues or other race conditions for sensitive operations.
