--- a/new/content/pages/products/index.adoc
+++ b/new/content/pages/products/index.adoc
@@ -14,7 +14,7 @@ image::product-integrates.png[link="../products/integrates/"]
 *Integrates* is constituted as a platform to control all the remediation
 processes in any stage of the software development life cycle.
 This is a red team management tool for reporting all project findings in the
-different phases and in real-time.
+different phases and in real time.
 
 [role="w-products center pt3"]
 image::product-drills.png[link="../products/drills/"]
@@ -34,8 +34,8 @@ image::product-forces.png[link="../products/forces/"]
 
 [role="mb-products"]
 *Forces* is a precise and very fast robot
-built to exploit what is found in exact locations in the systems.
+built to exploit what is found in exact locations within the systems.
 *Forces* automates attacks with the goal of verifying the status
-(open or closed) of vulnerabilities, and breaks the build to force the
-remediation of open vulnerabilities.
+(open or closed) of vulnerabilities, and breaks the build to force
+the remediation of open vulnerabilities.
 Fluid Attacks creates personalized exploits that perform these attacks.
