feat(doc): #2994.212 add refs to some rules
- Added ASVS references to R039, R327, R173, R042 and R040
- Added CWE references to R039, R042 and R040
- Updated R039, R040 and R042 keywords
- Adjusted R040 title for clarity
- Fixed some minor typos and grammar issues


Former-commit-id: f0ac206d9b79da1cfe6f0d9d1077819c28bf7a19

--- a/content/pages/rules/files/044/index.adoc
+++ b/content/pages/rules/files/044/index.adoc
@@ -8,7 +8,7 @@
 
 == Requirement
 
-All system files dynamically generated
+All system files generated dynamically
 must have a Character set explicitly defined.
 
 == References
