--- a/content/pages/rules/architecture/327/index.adoc
+++ b/content/pages/rules/architecture/327/index.adoc
@@ -86,3 +86,9 @@ V11.1 Business Logic Security Requirements.(11.1.5)]
 Verify the application has business logic limits or validation to protect
 against likely business risks or threats, identified using threat modelling or
 similar methodologies.
+
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V12.1 File Upload Requirements.(12.1.3)]
+Verify that a file size quota and maximum number of files per user is enforced
+to ensure that a single user cannot fill up the storage with too many files,
+or excessively large files.
