--- a/content/pages/rules/files/040/index.adoc
+++ b/content/pages/rules/files/040/index.adoc
@@ -1,10 +1,10 @@
 :slug: rules/040/
 :category: files
 :description: This requirement establishes that the system validates that the files' format corresponds to the specified extension.
-:keywords: System, Size, File, MB, Security, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: System, Size, File, MB, ASVS, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
-= R040. Validate file format and extension
+= R040. Compare file format and extension
 
 == Requirement
 
@@ -17,9 +17,18 @@ the format (structure) of the files corresponds to their extension.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/646.html[CWE-646: Reliance on File Name or Extension of Externally-Supplied File].
+. [[r1]] link:https://cwe.mitre.org/data/definitions/434.html[CWE-434: Unrestricted Upload of File with Dangerous Type].
+The software allows the attacker to upload or transfer files of dangerous types
+that can be automatically processed within the product's environment.
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/646.html[CWE-646: Reliance on File Name or Extension of Externally-Supplied File].
 The software allows a file to be uploaded,
 but it relies on the file name or extension of the file to determine the
 appropriate behaviors.
 This could be used by attackers to cause the file to be misclassified and
 processed in a dangerous fashion.
+
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V12.2 File Integrity Requirements.(12.2.1)]
+Verify that files obtained from untrusted sources are validated to be of
+expected type based on the file's content.
